--- a/src/posts/templates/detail.html
+++ b/src/posts/templates/detail.html
@@ -1,14 +1,10 @@
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% extends "base.html" %}
 
+{% block content%}
 <h1>{{ title }}</h1>
 
 {{instance.content}}<br/>
 {{instance.timestamp}}<br/>
 {{instance.updated}}<br/>
 {{instance.id}}<br/>
+{% endblock content %}
