--- a/src/posts/templates/post_form.html
+++ b/src/posts/templates/post_form.html
@@ -1,6 +1,10 @@
+{% extends "base.html" %}
+{% block content %}
+
 <h1>CREATE A POST</h1>
 <form method="POST" action="">{% csrf_token %}
     {{form.as_p}}
     <input type = 'submit'value ='create'/>
     
 </form>
+{% endblock content %}
