--- a/src/posts/templates/detail.html
+++ b/src/posts/templates/detail.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block content%}
-<h1>{{ title }}</h1>
+<div class='col-sm-6 col-sm-offset-3'>
+<h1>{{ title }}<small>{{instance.timestamp}}</small></h1>
 
-{{instance.content}}<br/>
-{{instance.timestamp}}<br/>
-{{instance.updated}}<br/>
-{{instance.id}}<br/>
+{{instance.content|linebreaks}}<br/>
+</div>
+<!-- {{instance.timestamp}}<br/> -->
+<!-- {{instance.updated}}<br/> -->
+<!-- {{instance.id}}<br/> -->
 {% endblock content %}
