--- a/src/posts/templates/post_form.html
+++ b/src/posts/templates/post_form.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class='col-sm-6 col-sm-offset-3'>
 <h1>CREATE A POST</h1>
 <form method="POST" action="">{% csrf_token %}
     {{form.as_p}}
     <input type = 'submit'value ='create'/>
     
 </form>
+</div>
 {% endblock content %}
